[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = "Fetches PubMed papers based on a query, extracts non-academic metadata, and summarizes abstracts using LLMs"
authors = [
    {name = "Praneel Thaker",email = "praneelmthaker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "typer[all] (>=0.16.0,<0.17.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "openai (>=1.95.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
get-papers-list = "cli:app"
